# vsproject

./: .gitignore  CMakeLists.txt  benchmark_release.sh  build.bat  build.config  build.sh  build_module.sh  build_release.sh  common_defs.h  dev_env.sh  stdafx.h
HGAppModule/: CMakeLists.txt  build_config.ini  build_log.txt  build_server.py  build_windows.bat  build_with_config.ps1  cmake_optimizations.cmake  compile_module.py  debug_HGUserAuditModule.bat  deploy.bat  fix_all_cmake_files.py  fix_all_cmake_files_v2.py  fix_all_cmake_files_v3.py  fix_qt_commands.py  fix_qt_commands_v2.py  list_modules.bat  modular_build.bat  modular_build.ps1  modular_build_simple.ps1  simple_build.bat  smart_build.bat  test_build.bat  windows_build.bat  模块化编译指南.md  编译优化指南.md
HGAppModule/HGAnalysisRecordModule/: CMakeLists.txt  main.cpp
HGAppModule/HGAnalysisRecordModule/inc/: analysisrecordplugindetector.h  hganalysisrecordwidget.h  hgdisplayrecordinfowidget.h  hgdisplayrecordwidget.h
HGAppModule/HGAnalysisRecordModule/src/: analysisrecordplugindetector.cpp  hganalysisrecordwidget.cpp  hgdisplayrecordinfowidget.cpp  hgdisplayrecordwidget.cpp
HGAppModule/HGBaseAppModule/: CMakeLists.txt
HGAppModule/HGBaseAppModule/inc/: DragDialog.h  QRoundProgressBar.h  authorityinfocache.h  basewidget.h  common.h  datachartinfocache.h  globalsingleton.h  hgmanipulatewidget.h  hgqlabel.h  labelwithimg.h  mychartview.h  mygraphicsview.h  mykeyboard.h  mypixmapitem.h  rectellipseitem.h  rectitem.h  systeminfocache.h  usersinfocache.h
HGAppModule/HGBaseAppModule/src/: DragDialog.cpp  QRoundProgressBar.cpp  authorityinfocache.cpp  basewidget.cpp  common.cpp  datachartinfocache.cpp  globalsingleton.cpp  hgmanipulatewidget.cpp  hgqlabel.cpp  labelwithimg.cpp  mychartview.cpp  mygraphicsview.cpp  mykeyboard.cpp  mypixmapitem.cpp  rectellipseitem.cpp  rectitem.cpp  systeminfocache.cpp  usersinfocache.cpp
HGAppModule/HGCameraRecognizeModule/: CMakeLists.txt  main.cpp
HGAppModule/HGCameraRecognizeModule/inc/: camerarecognizeplugindetector.h  hgcamerarecognizewidget.h
HGAppModule/HGCameraRecognizeModule/src/: camerarecognizeplugindetector.cpp  hgcamerarecognizewidget.cpp
HGAppModule/HGChannelModule/: CMakeLists.txt  main.cpp
HGAppModule/HGChannelModule/inc/: channelplugindetector.h  hgauxpumpwidget.h  hgchanneleditwidget.h  hgchannelmoduleeditwidget.h  hgchannelsetwidget.h  hgddmodulewidget.h  hgelebalancewidget.h  hgmodulelistwidget.h  hgphddwidget.h  hgswirlwidget.h
HGAppModule/HGChannelModule/src/: channelplugindetector.cpp  hgauxpumpwidget.cpp  hgchanneleditwidget.cpp  hgchannelmoduleeditwidget.cpp  hgchannelsetwidget.cpp  hgddmodulewidget.cpp  hgelebalancewidget.cpp  hgmodulelistwidget.cpp  hgphddwidget.cpp  hgswirlwidget.cpp
HGAppModule/HGCurveModule/: CMakeLists.txt  main.cpp
HGAppModule/HGCurveModule/inc/: curveplugindetector.h  hgcurvewidget.h  hgdisplaychartwidget.h
HGAppModule/HGCurveModule/src/: curveplugindetector.cpp  hgcurvewidget.cpp  hgdisplaychartwidget.cpp
HGAppModule/HGEBalanceModule/: CMakeLists.txt  main.cpp
HGAppModule/HGEBalanceModule/inc/: ebalanceplugindetector.h  hgebalancewidget.h
HGAppModule/HGEBalanceModule/src/: ebalanceplugindetector.cpp  hgebalancewidget.cpp
HGAppModule/HGExceptionHandleModule/: CMakeLists.txt  main.cpp
HGAppModule/HGExceptionHandleModule/inc/: exceptionhandleplugindetector.h  hgexceptionhandlewidget.h
HGAppModule/HGExceptionHandleModule/src/: exceptionhandleplugindetector.cpp  hgexceptionhandlewidget.cpp
HGAppModule/HGFlowModule/: CMakeLists.txt  main.cpp
HGAppModule/HGFlowModule/inc/: flowplugindetector.h  hgaddmedicationwidget.h  hgbalancewidget.h  hgblankwidget.h  hgdetectwidget.h  hgfloweditwidget.h  hgflowinfowidget.h  hgflowmodulelistwidget.h  hgflowwidget.h  hggetsamplewidget.h  hgholdsamplewidget.h  hginjectreagentwidget.h  hginjectsamplewidget.h  hgjudgewidget.h  hgloopwidget.h  hgswirlstepwidget.h  hgwaitwidget.h  hgwashwidget.h
HGAppModule/HGFlowModule/src/: flowplugindetector.cpp  hgaddmedicationwidget.cpp  hgbalancewidget.cpp  hgblankwidget.cpp  hgdetectwidget.cpp  hgfloweditwidget.cpp  hgflowinfowidget.cpp  hgflowmodulelistwidget.cpp  hgflowwidget.cpp  hggetsamplewidget.cpp  hgholdsamplewidget.cpp  hginjectreagentwidget.cpp  hginjectsamplewidget.cpp  hgjudgewidget.cpp  hgloopwidget.cpp  hgswirlstepwidget.cpp  hgwaitwidget.cpp  (+1 more)
HGAppModule/HGLogModule/: CMakeLists.txt  main.cpp
HGAppModule/HGLoginModule/: CMakeLists.txt  main.cpp
HGAppModule/HGMethodModule/: CMakeLists.txt  main.cpp
HGAppModule/HGPrintModule/: CMakeLists.txt  main.cpp
HGAppModule/HGReagentModule/: CMakeLists.txt  main.cpp
HGAppModule/HGScannerModule/: CMakeLists.txt  main.cpp  scannerplugindetector.cpp  scannerplugindetector.h  scannerwidgetplugin.cpp  scannerwidgetplugin.h
HGAppModule/HGSearchModule/: CMakeLists.txt  main.cpp
HGAppModule/HGSharedFileModule/: CMakeLists.txt  main.cpp
HGAppModule/HGTaskModule/: CMakeLists.txt  main.cpp
HGAppModule/HGUartModule/: CMakeLists.txt  main.cpp
HGAppModule/HGUserAuditModule/: CMakeLists.txt  main.cpp
HGAppModule/HGUserAuditModule (copy)/: CMakeLists.txt
HGAppModule/HGUserAuditModule_Release/: README.md  启动程序.bat
HGAppModule/HGUserAuditModule_debug/: README.md
HGAppModule/TestPlugin/: CMakeLists.txt  main.cpp
HGAppModule/build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake
HGAppModule/pluginInterface/: CMakeLists.txt
HGAppModule/simple_build/: CMakeCache.txt
HGAppModule/templates/: build_web.html
HGAppModule/test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
HGAppModule/test_qt6/: CMakeLists.txt  main.cpp
HGAppModule/windows_build/: CMakeCache.txt  CMakeLists.txt  Makefile  build_log.txt  cmake_install.cmake  compile_commands.json
interfaces/CameraRecognizeInterface/: CMakeLists.txt
interfaces/HGV6Interface/: CMakeLists.txt
interfaces/PackFuncInterface/: CMakeLists.txt
projects/CloudApp/: CMakeLists.txt  main.cpp
projects/MyCefTest/: CMakeLists.txt  main.cpp
services/HGCommon/: CMakeLists.txt
services/HGConfig/: CMakeLists.txt
(+1044 files in other folders)
